@@ -49,7 +49,6 @@ import java.util.Optional;
 import java.util.OptionalLong;
 import java.util.TreeMap;
 import java.util.concurrent.ConcurrentSkipListMap;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -525,9 +524,9 @@ public class ProducerStateManager {
      * transaction index, but the completion must be done only after successfully appending to the index.
      */
     public long lastStableOffset(CompletedTxn completedTxn) {
-        return findNextIncompleteTxn(completedTxn.producerId)
+        return findNextIncompleteTxn(completedTxn.producerId())
                 .map(x -> x.firstOffset.messageOffset)
-                .orElse(completedTxn.lastOffset + 1);
+                .orElse(completedTxn.lastOffset() + 1);
     }
 
     private Optional<TxnMetadata> findNextIncompleteTxn(long producerId) {
@@ -544,13 +543,13 @@ public class ProducerStateManager {
      * advancing the first unstable offset.
      */
     public void completeTxn(CompletedTxn completedTxn) {
-        TxnMetadata txnMetadata = ongoingTxns.remove(completedTxn.firstOffset);
+        TxnMetadata txnMetadata = ongoingTxns.remove(completedTxn.firstOffset());
         if (txnMetadata == null)
             throw new IllegalArgumentException("Attempted to complete transaction " + completedTxn + " on partition "
                     + topicPartition + " which was not started");
 
-        txnMetadata.lastOffset = OptionalLong.of(completedTxn.lastOffset);
-        unreplicatedTxns.put(completedTxn.firstOffset, txnMetadata);
+        txnMetadata.lastOffset = OptionalLong.of(completedTxn.lastOffset());
+        unreplicatedTxns.put(completedTxn.firstOffset(), txnMetadata);
         updateOldestTxnTimestamp();
     }
 
@@ -701,10 +700,10 @@ public class ProducerStateManager {
         if (dir.exists() && dir.isDirectory()) {
             try (Stream<Path> paths = Files.list(dir.toPath())) {
                 return paths.filter(ProducerStateManager::isSnapshotFile)
-                        .map(path -> new SnapshotFile(path.toFile())).collect(Collectors.toList());
+                        .map(path -> new SnapshotFile(path.toFile())).toList();
             }
         } else {
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
